Tue Apr 11 19:18:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Backwards incompatible API CHANGE:
	  OmDatabase renamed to OmDatabaseGroup, since this is what it is,
	  and better to change it sooner than later.
	  No work other than renaming the class should be neccessary to fix
	  old code.

Tue Apr 11 18:05:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Rework of indexer classes.  The indexer destination interface now
	  has only one method, which is add_document.  This gets passed
	  a DocumentContents, so the whole document is added to the database
	  at once.  Works for all backend types except sleepycat.  (Although
	  all except InMemory throw an OmUnimplemented exception.)

Tue Apr 11 13:59:24 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More detection stuff for sleepycat library: now works on all my
	  machines, but isn't really generic enough yet.

	* SleepyList now has methods to iterate through the list.

Thu Apr  6 00:57:46 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More sleepycat stuff:
	  o) Generic list implementation now allows items to be added, lists
	     to be written to databases, and lists to be read back from
	     databases.  Doesn't yet allow iteration through lists.
	  o) PostLists can be opened using the list implementation, and sizes
	     returned, but all other functionality not there yet.

	* Modifications to the configure system: now picks up sleepycat stuff
	  on my home machine.

Tue Apr  4 18:49:15 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Generic list implementation for sleepycat is now almost complete
	  (doesn't yet write lists, but all the other code is there).  Fully
	  untested, obviously.

Tue Apr  4 14:49:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* A really hacked network multimatch gets the same results as
	  the multidb1 test in apitest.  Much cleanup needed.
